--- a/client/pom.xml
+++ b/client/pom.xml
@@ -25,6 +25,14 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-base -->
+	<dependency>
+	    <groupId>org.openjfx</groupId>
+	    <artifactId>javafx-base</artifactId>
+	    <version>17.0.8</version>
+	</dependency>
+    
   </dependencies>
 
   <build>
